# Multithread-course-work-Java-threads-pthreads-OpenMP-

./: README.md
JavaThreads/src/Main/: Main.java  Matrix.java  MyThread.java
pthreads_OpenMP/: CMakeLists.txt
pthreads_OpenMP/src/Headers/: Matrix.h
pthreads_OpenMP/src/sources/: Matrix.cpp  main.cpp
